2007-02-09  Gert Driesen  <drieseng@users.sourceforge.net>

	* FormTest.cs: Added tests for bug #80773.

2007-02-09  Gert Driesen  <drieseng@users.sourceforge.net>

	* PrintDialogTest.cs: Added test for bug #80764.

2007-02-08  Jonathan Pobst  <monkey@jpobst.com>

	* ToolStripItemTest.cs: Uncomment tests relating to Overflow. Add
	test exploring interaction between Image, ImageIndex, and ImageKey.

2007-02-08  Gert Driesen  <drieseng@users.sourceforge.net>

	* FormTest.cs: Improved test for bug #80604.

2007-02-08  Gert Driesen  <drieseng@users.sourceforge.net>

	* ControlTest.cs: Removed use of #pragma to allow tests to be built using
	csc 1.x.

2007-02-08  Gert Driesen  <drieseng@users.sourceforge.net>

	* LogGenerator.cs: Generate code that can be built using csc 1.x.
	* ControlLogger.cs: Fixed code to compile using csc 1.x.

2007-02-08  Rolf Bjarne Kvinge <RKvinge@novell.com> 

	* DateTimePickerTest.cs: Created more tests for DateTimePicker, now
	  tests a lot of different custom formats.

2007-02-07  Gert Driesen  <drieseng@users.sourceforge.net>

	* DataGridViewColumnTest.cs: Added test for bug #80746.

2007-02-07  Gert Driesen  <drieseng@users.sourceforge.net>

	* ListBoxTest.cs: Added tests for bug #80696 and bug #80753.

2007-02-06  Rolf Bjarne Kvinge <RKvinge@novell.com> 

	* TimerTest.cs: Added

2007-02-04  Gert Driesen  <drieseng@users.sourceforge.net>

	* PaddingConverterTest.cs: Added back ConvertTo and ConvertFrom tests,
	and make them pass on all cultures.

2007-02-04  Jonathan Pobst  <monkey@jpobst.com>

	* PaddingConverterTest.cs: Make tests non culture-dependent.

2007-02-03  Rolf Bjarne Kvinge <RKvinge@novell.com> 

	* TestHelper.cs: Added a helper method to remove warnings.

2007-02-03  Rolf Bjarne Kvinge <RKvinge@novell.com> 

	* ControlTest.cs: Removed warnings. Added CaptureTest.
	* LogGenerator.cs: Added (used to generate ControlLogger and ControlLogger2).
	* ControlLogger(2).cs: Added.

2007-02-01  Everaldo Canuto  <everaldo@simios.org>
