@@ -1,3 +1,8 @@
+2007-02-10  Gert Driesen  <drieseng@users.sourceforge.net>
+
+	* PrintDialogTest.cs: Fixed DefaultValues test on 2.0 profile.
+	* ToolStripTest.cs: Added test for bug #80762. Enabled ignored test.
+
 2007-02-09  Gert Driesen  <drieseng@users.sourceforge.net>
 
 	* FormTest.cs: Added tests for bug #80773.
